# expenses_manager

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  expenses.py  main.py  new.sqlite  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
alembic/versions/: 315dfae82a59_initial_migration.py
app/: crud.py  database.py  exception.py  main.py  models.py  new.sqlite  schemas.py
app/api/: auth.py  categories.py  expenses.py  router.py
app/auth/: routers.py
app/core/: exception.py  handlers.py  security.py
app/db/: session.py
app/expenses/: crud.py  database.py  exception.py  models.py  routers.py  schemas.py
app/models/: __init__.py  models.py
app/schemas/: schemas.py
app/users/: crud.py
scripts/: seed_data.py
tests/: conftest.py  test_api.py  test_auth.py  test_categories.py  test_expenses.py  test_expenses_filters.py  test_export.py  test_statistics.py  test_users.py  test_visualization.py
