[project]
name = "expenses-manager"
version = "0.1.0"
description = "Expense Manager API using FastAPI and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Piotr Gołębiewski", email = "pgolebiewski07@gmail.com" }
]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "SQLAlchemy==2.0.44",
    "pydantic==2.10.6",
    "passlib==1.7.4",
    "bcrypt==3.2.2",
    "PyJWT==2.11.0",
    "python-dotenv==1.2.1",
    "email-validator==2.3.0",
    "openpyxl==3.1.5",
    "numpy==2.1.3",
    "matplotlib==3.10.7",
    "alembic==1.18.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "httpx>=0.27",
    "pytest-cov>=4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# --------------------------
# PYTEST CONFIG (minimalne)
# --------------------------
[tool.pytest.ini_options]
addopts = "-q"

# --------------------------
# RUFF (minimalny linter)
# --------------------------
[tool.ruff.lint]
select = ["E", "F"]
exclude = [".venv"]